src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

$font-stack: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
  "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";

body {
  font-family: $font-stack;
}

html,
body,
#root,
.app {
  height: 100vh;
  width: 100vw;
  max-width: 100vw;
  overflow-x: auto;
  font-family: $font-stack;
  a {
    text-decoration: none;
  }
}

*:focus-visible {
  // outline: none !important;
  // box-shadow: 0 0 6px #5009b5;
  outline: 2px solid #5009b5;
  outline-offset: 3px;
}

::-webkit-scrollbar {
  height: 4px;
  width: 4px;
}
::-webkit-scrollbar-thumb {
  background-color: #555;
  border-radius: 4px;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #777;
}
::-webkit-scrollbar-track {
  background-color: #eee;
  border-radius: 4px;
}

@supports (-moz-appearance: none) {
  * {
    scrollbar-width: thin;
    scrollbar-color: #555 #eee;
  }
}

body {
  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* Use your defined font, with a generic fallback */
}

